Phase1/Phase1_Deliverable/TigerParser.java
// $ANTLR 3.5.2 /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g 2014-10-08 19:13:37

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class TigerParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ASSIGN", "Array", "Begin", 
		"Break", "COLON", "COMMA", "COMMENT", "DIV", "Do", "EQ", "Else", "End", 
		"Enddo", "Endif", "FIXEDPTLIT", "Fixedpt", "For", "Function", "GREATER", 
		"GREATEREQ", "ID", "INTLIT", "If", "Int", "LBRACK", "LESSER", "LESSEREQ", 
		"LPAREN", "MINUS", "MULT", "Main", "NEQ", "OR", "Of", "PLUS", "RBRACK", 
		"RPAREN", "Return", "SEMI", "Then", "To", "Type", "Var", "Void", "WS", 
		"While", "' ['"
	};
	public static final int EOF=-1;
	public static final int T__51=51;
	public static final int AND=4;
	public static final int ASSIGN=5;
	public static final int Array=6;
	public static final int Begin=7;
	public static final int Break=8;
	public static final int COLON=9;
	public static final int COMMA=10;
	public static final int COMMENT=11;
	public static final int DIV=12;
	public static final int Do=13;
	public static final int EQ=14;
	public static final int Else=15;
	public static final int End=16;
	public static final int Enddo=17;
	public static final int Endif=18;
	public static final int FIXEDPTLIT=19;
	public static final int Fixedpt=20;
	public static final int For=21;
	public static final int Function=22;
	public static final int GREATER=23;
	public static final int GREATEREQ=24;
	public static final int ID=25;
	public static final int INTLIT=26;
	public static final int If=27;
	public static final int Int=28;
	public static final int LBRACK=29;
	public static final int LESSER=30;
	public static final int LESSEREQ=31;
	public static final int LPAREN=32;
	public static final int MINUS=33;
	public static final int MULT=34;
	public static final int Main=35;
	public static final int NEQ=36;
	public static final int OR=37;
	public static final int Of=38;
	public static final int PLUS=39;
	public static final int RBRACK=40;
	public static final int RPAREN=41;
	public static final int Return=42;
	public static final int SEMI=43;
	public static final int Then=44;
	public static final int To=45;
	public static final int Type=46;
	public static final int Var=47;
	public static final int Void=48;
	public static final int WS=49;
	public static final int While=50;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public TigerParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public TigerParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return TigerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g"; }



	// $ANTLR start "tiger_program"
	// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:11:1: tiger_program : type_declaration_list funct_declaration main_function ;
	public final void tiger_program() throws RecognitionException {
		try {
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:12:3: ( type_declaration_list funct_declaration main_function )
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:12:5: type_declaration_list funct_declaration main_function
			{
			pushFollow(FOLLOW_type_declaration_list_in_tiger_program47);
			type_declaration_list();
			state._fsp--;

			pushFollow(FOLLOW_funct_declaration_in_tiger_program49);
			funct_declaration();
			state._fsp--;

			pushFollow(FOLLOW_main_function_in_tiger_program51);
			main_function();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "tiger_program"



	// $ANTLR start "funct_declaration"
	// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:83:1: funct_declaration : ( Void funct_declaration_tail | funct_declaration_type_id funct_declaration );
	public final void funct_declaration() throws RecognitionException {
		try {
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:84:3: ( Void funct_declaration_tail | funct_declaration_type_id funct_declaration )
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==Void) ) {
				alt1=1;
			}
			else if ( (LA1_0==Fixedpt||LA1_0==ID||LA1_0==Int) ) {
				alt1=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:84:5: Void funct_declaration_tail
					{
					match(input,Void,FOLLOW_Void_in_funct_declaration530); 
					pushFollow(FOLLOW_funct_declaration_tail_in_funct_declaration532);
					funct_declaration_tail();
					state._fsp--;

					}
					break;
				case 2 :
					// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:85:5: funct_declaration_type_id funct_declaration
					{
					pushFollow(FOLLOW_funct_declaration_type_id_in_funct_declaration538);
					funct_declaration_type_id();
					state._fsp--;

					pushFollow(FOLLOW_funct_declaration_in_funct_declaration540);
					funct_declaration();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "funct_declaration"



	// $ANTLR start "funct_declaration_tail"
	// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:88:1: funct_declaration_tail : ( funct_declaration_void funct_declaration )? ;
	public final void funct_declaration_tail() throws RecognitionException {
		try {
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:89:3: ( ( funct_declaration_void funct_declaration )? )
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:89:5: ( funct_declaration_void funct_declaration )?
			{
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:89:5: ( funct_declaration_void funct_declaration )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==Function) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:89:6: funct_declaration_void funct_declaration
					{
					pushFollow(FOLLOW_funct_declaration_void_in_funct_declaration_tail556);
					funct_declaration_void();
					state._fsp--;

					pushFollow(FOLLOW_funct_declaration_in_funct_declaration_tail558);
					funct_declaration();
					state._fsp--;

					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "funct_declaration_tail"



	// $ANTLR start "funct_declaration_type_id"
	// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:92:1: funct_declaration_type_id : type_id Function ID '(' param_list ')' Begin block_list End ';' ;
	public final void funct_declaration_type_id() throws RecognitionException {
		try {
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:93:3: ( type_id Function ID '(' param_list ')' Begin block_list End ';' )
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:93:5: type_id Function ID '(' param_list ')' Begin block_list End ';'
			{
			pushFollow(FOLLOW_type_id_in_funct_declaration_type_id575);
			type_id();
			state._fsp--;

			match(input,Function,FOLLOW_Function_in_funct_declaration_type_id577); 
			match(input,ID,FOLLOW_ID_in_funct_declaration_type_id579); 
			match(input,LPAREN,FOLLOW_LPAREN_in_funct_declaration_type_id581); 
			pushFollow(FOLLOW_param_list_in_funct_declaration_type_id583);
			param_list();
			state._fsp--;

			match(input,RPAREN,FOLLOW_RPAREN_in_funct_declaration_type_id585); 
			match(input,Begin,FOLLOW_Begin_in_funct_declaration_type_id587); 
			pushFollow(FOLLOW_block_list_in_funct_declaration_type_id589);
			block_list();
			state._fsp--;

			match(input,End,FOLLOW_End_in_funct_declaration_type_id591); 
			match(input,SEMI,FOLLOW_SEMI_in_funct_declaration_type_id593); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "funct_declaration_type_id"



	// $ANTLR start "funct_declaration_void"
	// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:95:1: funct_declaration_void : Function ID '(' param_list ')' Begin block_list End ';' ;
	public final void funct_declaration_void() throws RecognitionException {
		try {
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:96:3: ( Function ID '(' param_list ')' Begin block_list End ';' )
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:96:5: Function ID '(' param_list ')' Begin block_list End ';'
			{
			match(input,Function,FOLLOW_Function_in_funct_declaration_void605); 
			match(input,ID,FOLLOW_ID_in_funct_declaration_void607); 
			match(input,LPAREN,FOLLOW_LPAREN_in_funct_declaration_void609); 
			pushFollow(FOLLOW_param_list_in_funct_declaration_void611);
			param_list();
			state._fsp--;

			match(input,RPAREN,FOLLOW_RPAREN_in_funct_declaration_void613); 
			match(input,Begin,FOLLOW_Begin_in_funct_declaration_void615); 
			pushFollow(FOLLOW_block_list_in_funct_declaration_void617);
			block_list();
			state._fsp--;

			match(input,End,FOLLOW_End_in_funct_declaration_void619); 
			match(input,SEMI,FOLLOW_SEMI_in_funct_declaration_void621); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "funct_declaration_void"



	// $ANTLR start "main_function"
	// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:98:1: main_function : Main '(' ')' Begin block_list End ';' ;
	public final void main_function() throws RecognitionException {
		try {
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:99:3: ( Main '(' ')' Begin block_list End ';' )
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:99:5: Main '(' ')' Begin block_list End ';'
			{
			match(input,Main,FOLLOW_Main_in_main_function635); 
			match(input,LPAREN,FOLLOW_LPAREN_in_main_function637); 
			match(input,RPAREN,FOLLOW_RPAREN_in_main_function638); 
			match(input,Begin,FOLLOW_Begin_in_main_function640); 
			pushFollow(FOLLOW_block_list_in_main_function642);
			block_list();
			state._fsp--;

			match(input,End,FOLLOW_End_in_main_function644); 
			match(input,SEMI,FOLLOW_SEMI_in_main_function646); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "main_function"



	// $ANTLR start "ret_type"
	// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:105:1: ret_type : ( Void | type_id );
	public final void ret_type() throws RecognitionException {
		try {
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:106:3: ( Void | type_id )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==Void) ) {
				alt3=1;
			}
			else if ( (LA3_0==Fixedpt||LA3_0==ID||LA3_0==Int) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:106:5: Void
					{
					match(input,Void,FOLLOW_Void_in_ret_type668); 
					}
					break;
				case 2 :
					// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:107:5: type_id
					{
					pushFollow(FOLLOW_type_id_in_ret_type674);
					type_id();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "ret_type"



	// $ANTLR start "param_list"
	// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:111:1: param_list : ( param param_list_tail )? ;
	public final void param_list() throws RecognitionException {
		try {
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:112:3: ( ( param param_list_tail )? )
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:112:5: ( param param_list_tail )?
			{
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:112:5: ( param param_list_tail )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==ID) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:112:6: param param_list_tail
					{
					pushFollow(FOLLOW_param_in_param_list691);
					param();
					state._fsp--;

					pushFollow(FOLLOW_param_list_tail_in_param_list693);
					param_list_tail();
					state._fsp--;

					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "param_list"



	// $ANTLR start "param_list_tail"
	// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:114:1: param_list_tail : ( ',' param param_list_tail )? ;
	public final void param_list_tail() throws RecognitionException {
		try {
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:115:3: ( ( ',' param param_list_tail )? )
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:115:5: ( ',' param param_list_tail )?
			{
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:115:5: ( ',' param param_list_tail )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==COMMA) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:115:6: ',' param param_list_tail
					{
					match(input,COMMA,FOLLOW_COMMA_in_param_list_tail708); 
					pushFollow(FOLLOW_param_in_param_list_tail710);
					param();
					state._fsp--;

					pushFollow(FOLLOW_param_list_tail_in_param_list_tail712);
					param_list_tail();
					state._fsp--;

					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "param_list_tail"



	// $ANTLR start "param"
	// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:117:1: param : ID ':' type_id ;
	public final void param() throws RecognitionException {
		try {
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:118:3: ( ID ':' type_id )
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:118:5: ID ':' type_id
			{
			match(input,ID,FOLLOW_ID_in_param726); 
			match(input,COLON,FOLLOW_COLON_in_param728); 
			pushFollow(FOLLOW_type_id_in_param730);
			type_id();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "param"



	// $ANTLR start "block_list"
	// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:121:1: block_list : block block_tail ;
	public final void block_list() throws RecognitionException {
		try {
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:122:3: ( block block_tail )
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:122:5: block block_tail
			{
			pushFollow(FOLLOW_block_in_block_list745);
			block();
			state._fsp--;

			pushFollow(FOLLOW_block_tail_in_block_list747);
			block_tail();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "block_list"



	// $ANTLR start "block_tail"
	// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:125:1: block_tail : ( block block_tail )? ;
	public final void block_tail() throws RecognitionException {
		try {
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:126:3: ( ( block block_tail )? )
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:126:5: ( block block_tail )?
			{
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:126:5: ( block block_tail )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==Begin) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:126:6: block block_tail
					{
					pushFollow(FOLLOW_block_in_block_tail766);
					block();
					state._fsp--;

					pushFollow(FOLLOW_block_tail_in_block_tail768);
					block_tail();
					state._fsp--;

					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "block_tail"



	// $ANTLR start "block"
	// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:129:1: block : Begin declaration_segment stat_seq End ';' ;
	public final void block() throws RecognitionException {
		try {
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:130:3: ( Begin declaration_segment stat_seq End ';' )
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:130:5: Begin declaration_segment stat_seq End ';'
			{
			match(input,Begin,FOLLOW_Begin_in_block787); 
			pushFollow(FOLLOW_declaration_segment_in_block789);
			declaration_segment();
			state._fsp--;

			pushFollow(FOLLOW_stat_seq_in_block791);
			stat_seq();
			state._fsp--;

			match(input,End,FOLLOW_End_in_block793); 
			match(input,SEMI,FOLLOW_SEMI_in_block795); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "block"



	// $ANTLR start "declaration_segment"
	// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:133:1: declaration_segment : type_declaration_list var_declaration_list ;
	public final void declaration_segment() throws RecognitionException {
		try {
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:134:3: ( type_declaration_list var_declaration_list )
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:134:5: type_declaration_list var_declaration_list
			{
			pushFollow(FOLLOW_type_declaration_list_in_declaration_segment808);
			type_declaration_list();
			state._fsp--;

			pushFollow(FOLLOW_var_declaration_list_in_declaration_segment810);
			var_declaration_list();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declaration_segment"



	// $ANTLR start "type_declaration_list"
	// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:137:1: type_declaration_list : ( type_declaration type_declaration_list )? ;
	public final void type_declaration_list() throws RecognitionException {
		try {
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:138:3: ( ( type_declaration type_declaration_list )? )
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:138:5: ( type_declaration type_declaration_list )?
			{
			// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:138:5: ( type_declaration type_declaration_list )?
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==Type) ) {
				alt7=1;
			}
			switch (alt7) {
				case 1 :
					// /Users/jiunum1/Documents/JavaWorks/workspace_CS4240/CS4240 Project 1/src/Tiger.g:138:6: type_declaration type_declaration_list
					{
					pushFollow(FOLLOW_type_declaration_in_type_declaration_list824);
					type_declaration();
					state._fsp--;

					pushFollow(FOLLOW_type_declaration_list_in_type_declaration_list826);
					type_declaration_list();
					state._fsp--;

					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "type_declaration_list"


